@@ -1,3 +1,9 @@
+2011-12-27 Tue  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-package-name-valid-p):
+	Correct parens.
+	(epackage-batch-devel-compose-package-dir): New.
+
 2011-12-23 Fri  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-with-case-fold-search): New.
